According to consul_template documentation, command is optional

--- a/templates/consul-template.hcl.snippet.erb
+++ b/templates/consul-template.hcl.snippet.erb
@@ -1,6 +1,8 @@
 template {
-  source = "<%= @source %>"
-  destination = "<%= @destination %>"
-  command =  "<%= @command %>"
+  source = "<%= @source %>
+  destination = "<%= @destination %>
+<% if @command -%>
+  command =  "<%= @command %>
+<% end -%>
 }
 
