Allow host to be unix domain socket

--- a/templates/consul-template.hcl.header.erb
+++ b/templates/consul-template.hcl.header.erb
@@ -1,2 +1,2 @@
-consul = "<%= scope.lookupvar('consul_template::consul_host') %>:<%= scope.lookupvar('consul_template::consul_port') %>" # token = "abcd1234"
+consul = "<%= scope.lookupvar('consul_template::consul_host') %><% if ! scope.lookupvar('consul_template::consul_host').start_with?('unix://') %>:<%= scope.lookupvar('consul_template::consul_port') %>" # token = "abcd1234"<% end %>
 
